# tz-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
rpc/: .gitignore  Cargo.toml  Makefile
rpc/.github/workflows/: rust.yml
rpc/src/: client_tests.rs  lib.rs  types.rs
rpc/src/commands/: get_balance.rs  get_block_information.rs  get_blocks_in_chain.rs  mod.rs
rpc/src/commands/chains/: get_current_checkpoint.rs  mod.rs
rpc/src/commands/chains/blocks/: get_balance.rs  get_blocks_in_chain.rs  get_invalid_blocks_in_chain.rs  mod.rs
rpc/src/errors/: mod.rs  parse_error.rs  rpc_error.rs
rpc/src/responses/: balance.rs  block_ids_in_chain.rs  bulk_array.rs  json_array.rs  mod.rs
rpc/src/responses/chains/: current_checkpoint.rs  mod.rs
rpc/src/responses/chains/blocks/: balance.rs  block_ids_in_chain.rs  invalid_blocks_in_chain.rs  mod.rs
rpc/src/rpc_commands/: get_balance.rs  get_blocks_in_chain.rs
rpc/src/types/: base58.rs  block.rs  chain.rs  errors.rs  mod.rs  unistring.rs
rpc/tests/: client_tests.rs
rpc/tests/rpc_command_tests/: get_balance_from_block.rs  get_blocks_in_chain.rs  get_current_checkpoint.rs  get_invalid_blocks_in_chain.rs  mod.rs
