[package]
name = "rpc"
version = "0.1.0"
license = "MIT"
authors = ["Liam Arzola <liam0215@gmail.edu>", "Felipe Arce <farceriv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
